# mkdocs

./: .gitignore  AGENTS.md  README.md  plugin.py  pyproject.toml  setup.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml  question.yml
.github/workflows/: cla.yml  format.yml  publish.yml
plugin/: __init__.py  main.py  postprocess.py  processor.py  utils.py
